--- a/geometry/figures.css
+++ b/geometry/figures.css
@@ -52,6 +52,7 @@ body {
     padding: 1.6rem 1.8rem;
     border-radius: 0.6rem;
     border:0.2rem solid white;
+    text-align: center;
 }
 
 /* geometry section container */
